--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,33 @@
 language: java
+
+install: true
+
+matrix:
+  include:
+  - jdk: oraclejdk8
+
+before_deploy:
+- echo $projectversion
+- mvn package
+- git config --global user.email "builds@travis-ci.com"
+- git config --global user.name "Travis CI"
+- export GIT_TAG=$projectversion-$TRAVIS_BUILD_NUMBER
+- git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $TRAVIS_BUILD_NUMBER"
+- git push -q https://$GITPERM@github.com/mob41/XstudSu --tags
+- ls -R
+
+deploy:
+  skip_cleanup: true
+  provider: releases
+  api_key: $GITPERM
+  file: target/XstudSu-$projectversion.jar
+  on:
+    tags: false
+    all_branches: true
+    
+branches:
+  only:
+    - master
+
+env:
+- projectversion=2.2.0-BETA
